# mlzoocamp2025MidTermProject

./: Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
app/: main.py
notebooks/: exploration.ipynb
scripts/: test_api.py  train_model.py
src/: predict.py  schemas.py  train.py
